Commented all of my custom css and applied bootstrap classes.

--- a/src/main/resources/static/css/jobsPage.css
+++ b/src/main/resources/static/css/jobsPage.css
@@ -1,5 +1,9 @@
 body {
     outline: none;
+    margin: 0;
+    font-family: Edelsans, Avenir, sans-serif;
+    background-color: #2c2c2c;
+    color: #FFFFFF;
 }
 
 .cntr-text {
@@ -8,62 +12,58 @@ body {
 }
 
 .bar {
-    z-index: 1;
-    position: fixed;
-    display: flex;
-    align-content: center;
-    width: 100%;
-    background-size: cover;
-    top: 0;
-    padding: 5px;
+    /*!*z-index: 1;*!*/
+    /*!*position: fixed;*!*/
+    /*!*display: flex;*!*/
+    /*!*align-content: center;*!*/
+    /*!*width: 100%;*!*/
+    /*!*background-size: cover;*!*/
+    /*!*top: 0;*!*/
+    /*!*padding: 5px;*!*/
     color: black;
-    height: 5.3rem;
+    /*!*height: 5.3rem;*!*/
     background-color: rgba(46,46,46,0.6);
-    list-style: none;
-    margin: 0;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-flow: row wrap;
-    justify-content: space-around;
+    /*list-style: none;*/
+    /*margin: 0;*/
+    /*!*display: -webkit-box;*!*/
+    /*!*display: -moz-box;*!*/
+    /*!*display: -ms-flexbox;*!*/
+    /*!*display: -webkit-flex;*!*/
+    /*!*display: flex;*!*/
+    /*!*-webkit-flex-flow: row wrap;*!*/
+    /*!*justify-content: space-around;*!*/
 }
 
-.nav-container div {
-    text-decoration: none;
-    display: block;
-    color: white;
-}
+/*.nav-container div {*/
+    /*text-decoration: none;*/
+    /*display: block;*/
+    /*color: white;*/
+/*}*/
 
-.nav-box1 {
-    flex: 1;
-}
+/*.nav-box1 {*/
+    /*flex: 1;*/
+/*}*/
 
-.nav-box2 {
-    flex: 3;
-}
+/*.nav-box2 {*/
+    /*flex: 3;*/
+/*}*/
 
-.nav-box3 {
-    flex: 1;
-}
+/*.nav-box3 {*/
+    /*flex: 1;*/
+/*}*/
 
 .logo {
-    width: 4.4rem;
-    height: 4.4rem;
-    margin-right: 1%;
-    margin-left: 1%;
-    position: fixed;
-    display: inline;
-}
-
-#map {
-    border-radius: 8px;
+    width: 3rem;
+    height: 4rem;
+    /*margin-right: 1%;*/
+    /*margin-left: 1%;*/
+    /*position: fixed;*/
+    /*display: inline;*/
 }
 
 #city-input {
-    width: 45rem;
-    height: 3.7rem;
+    /*width: 45rem;*/
+    /*height: 3.7rem;*/
     border-radius: 8px;
     text-align: center;
     font-size: 2rem;
@@ -72,8 +72,8 @@ body {
 
 .go {
     color: #FFFFFF;
-    width: 4.5rem;
-    height: 3.4rem;
+    /*width: 4.5rem;*/
+    /*height: 3.4rem;*/
     border-radius: 8px;
     font-size: x-large;
     background: none;
@@ -89,9 +89,9 @@ body {
     margin-top: -16vh;
 }
 
-.test-bar {
-    flex-basis: 100%;
-}
+/*.test-bar {*/
+    /*flex-basis: 100%;*/
+/*}*/
 
 html {
     font-size: 14px;
@@ -99,28 +99,22 @@ html {
 
 html, body {
     height: 100%;
-    box-sizing: border-box;
+    /*box-sizing: border-box;*/
 }
 
 body input:focus {
     outline: none;
 }
 
-body {
-    margin: 0;
-    font-family: Edelsans, Avenir, sans-serif;
-    background-color: #2c2c2c;
-    color: #FFFFFF;
-}
 /*===================NAV BAR===================*/
 
-.navbar-item {
-    margin: 4px;
-}
+/*.navbar-item {*/
+    /*margin: 4px;*/
+/*}*/
 
-.search {
-    flex: 1;
-}
+/*.search {*/
+    /*flex: 1;*/
+/*}*/
 
 #logo {
 
@@ -135,9 +129,9 @@ a:visited {
 /*Wraps everything below navbar*/
 #content-wrap {
     margin-top: 75px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    /*display: flex;*/
+    /*flex-direction: column;*/
+    /*justify-content: center;*/
 }
 
 /*Wraps location-image, location-name and location-info*/
@@ -167,6 +161,7 @@ a:visited {
     background-color: azure;
     height: 300px;
     width: 90%;
+    border-radius: 8px;
 }
 
 .colored-tile {
@@ -186,12 +181,12 @@ a:visited {
 
 .section {
     height: 100vh;
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    /*box-sizing: border-box;*/
+    /*display: flex;*/
+    /*align-items: center;*/
+    /*justify-content: center;*/
     text-align: center;
-    flex-direction: column;
+    /*flex-direction: column;*/
     padding: 2vw;
     background-size: cover;
     background-repeat: no-repeat;
@@ -201,17 +196,17 @@ a:visited {
 
 /*==================INFO CARDS CSS==================*/
 #info-card-container {
-    justify-content: center;
+    /*justify-content: center;*/
     width: 100%;
-    display: flex;
-    flex-direction: column;
+    /*display: flex;*/
+    /*flex-direction: column;*/
 }
 
 .info-card {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
+    /*display: flex;*/
+    /*flex-direction: column;*/
+    /*justify-content: center;*/
+    /*align-content: center;*/
     box-shadow: 0 4px 8px 0 #563444;
     margin: 5px auto;
     height: 300px;
@@ -255,57 +250,56 @@ a:visited {
 }
 
 footer{
-    display: flex;
-    align-items: center;
+    /*display: flex;*/
+    /*align-items: center;*/
     width: 100%;
 }
 
 /*==================MEDIUM AND LARGE SIZE CHANGES==================*/
 
+/*@media all and(max-width: 800px) {*/
 
-@media all and(max-width: 800px) {
+    /*.nav-container {*/
+        /*justify-content: space-around;*/
+    /*}*/
+/*}*/
+/*@media all and(max-width: 600px) {*/
 
-    .nav-container {
-        justify-content: space-around;
-    }
-}
-@media all and(max-width: 600px) {
-
-    .nav-container {
-        -webkit-flex-flow: column wrap;
-        flex-flow: column wrap;
-        padding: 0;
-        justify-content: center;
-    }
-    .nav-container div {
-        text-align: center;
-        padding: 10px;
-        border-top: 1px solid rgba(255,255,255,0.3);
-        border-bottom: 1px solid rgba(0,0,0,0.1);
-    }
-    .nav-container div:last-of-type a {
-        border-bottom: none;
-    }
-    .nav-box1 {
-        flex: .1;
-    }
-    .nav-box2 {
-        flex: none;
-    }
-    .nav-box3 {
-        flex: .1;
-        margin-right: 0.5rem;
-    }
-    .logo {
-        width: 3rem;
-        height: 4rem;
-        margin-left: 0;
-        margin-right: 0;
-    }
-    .go {
-        font-size: 0;
-    }
-    #city-input {
-        width: 4rem;
-    }
-}
+    /*.nav-container {*/
+        /*-webkit-flex-flow: column wrap;*/
+        /*flex-flow: column wrap;*/
+        /*padding: 0;*/
+        /*justify-content: center;*/
+    /*}*/
+    /*.nav-container div {*/
+        /*text-align: center;*/
+        /*padding: 10px;*/
+        /*border-top: 1px solid rgba(255,255,255,0.3);*/
+        /*border-bottom: 1px solid rgba(0,0,0,0.1);*/
+    /*}*/
+    /*.nav-container div:last-of-type a {*/
+        /*border-bottom: none;*/
+    /*}*/
+    /*.nav-box1 {*/
+        /*flex: .1;*/
+    /*}*/
+    /*.nav-box2 {*/
+        /*flex: none;*/
+    /*}*/
+    /*.nav-box3 {*/
+        /*flex: .1;*/
+        /*margin-right: 0.5rem;*/
+    /*}*/
+    /*.logo {*/
+        /*width: 3rem;*/
+        /*height: 4rem;*/
+        /*!*margin-left: 0;*!*/
+        /*!*margin-right: 0;*!*/
+    /*}*/
+    /*.go {*/
+        /*font-size: 0;*/
+    /*}*/
+    /*#city-input {*/
+        /*width: 4rem;*/
+    /*}*/
+/*}*/
