--- a/src/main/resources/static/css/globalGym.css
+++ b/src/main/resources/static/css/globalGym.css
@@ -133,24 +133,36 @@ a:visited {
 }
 
 .expand-btn {
-  position: relative;
+  position: absolute;
+  top: 130px;
+  right: 5px;
+  height: 32px;
+  width: 32px;
+}
 
+/*TODO Make this change size dynamically with vh and vw*/
+.expand-img {
+  height: 32px;
+  width: 32px;
 }
 
 .info-card {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-content: center;
-  box-shadow: 0 4px 8px 0 #563444;
+  box-shadow: 0 4px 8px 0 #201419;
   margin: 5px auto;
-  height: 300px;
-  width: 360px;
+  margin-bottom: 0;
+  height: 50vh;
+  width: 80vw;
   font-size: 4vw;
   text-align: center;
   background-color: rgba(235, 235, 188, 0.67);
 }
 
+/*TODO Change the position of this element to be always in the top left of .info-card*/
 .info-card-img {
   width: 10vw;
   height: 10vh;
@@ -159,6 +171,16 @@ a:visited {
 
 .extra-info {
   display: none;
+  position: relative;
+  box-shadow: 0 4px 8px 0 #201419;
+  margin: 5px auto;
+  margin-top: 0;
+  height: 50vh;
+  width: 80vw;
+  font-size: 4vw;
+  text-align: center;
+  background-color: rgba(180, 177, 180, 0.67);
+
 }
 
 #averages-title {
