--- a/src/main/resources/templates/nav/jobs.html
+++ b/src/main/resources/templates/nav/jobs.html
@@ -26,7 +26,7 @@
             <li><a href="/register">Register</a></li>
             <li><a href="/login">Login</a></li>
         </ul>
-            <div class="navbar-left">
+            <div class="navbar-left navbar-form">
                 <input type="text" class="form-control navbar-item" id="city-input" placeholder="Company Address"/>
             </div>
             <button class="go navbar-item" id="get-info">Search</button>
