Updated ajax.js -Added ability to see median salary for industry selected -added culture information. (will add to view next)

--- a/src/main/resources/static/css/globalGym.css
+++ b/src/main/resources/static/css/globalGym.css
@@ -90,6 +90,7 @@ a:visited {
   width: 90%;
 }
 
+/*TODO Change these to have box shading on top and bottom*/
 .colored-tile {
   align-content: center;
   color: #ffffff;
