--- a/src/main/resources/static/css/jobsPage.css
+++ b/src/main/resources/static/css/jobsPage.css
@@ -17,38 +17,44 @@ body {
     background-color: rgba(42,42,42,0.6);
 }
 
-.navbar-left {
-    margin-left: 100px;
-}
+/*.navbar-left {*/
+    /*margin-left: 100px;*/
+/*}*/
 
-.navbar-nav {
-    margin-left: 50px;
-}
+/*.navbar-nav {*/
+    /*margin-left: 50px;*/
+/*}*/
 
-.navbar-header {
-    margin-left: 50px;
-}
+/*.navbar-header {*/
+    /*margin-left: 50px;*/
+/*}*/
 
-@media (min-width: 768px) {
-    .navbar-left {
-        float: left !important;
-        margin-left: 0;
-    }
-    .navbar-nav {
-        margin-left: 35%;
-        position: absolute;
-        margin-top: -19%;
-    }
-    #logo {
-        width: 3rem;
-        height: 3rem;
-    }
-    .go {
-        margin-left: 68%;
-        position: absolute;
-        margin-top: -39%;
-    }
-}
+/*@media (max-width: 767px) {*/
+    /*.navbar-left {*/
+        /*float: left !important;*/
+        /*margin-left: 6%;*/
+    /*}*/
+    /*.navbar-nav {*/
+        /*margin-left: 35%;*/
+        /*position: absolute;*/
+        /*margin-top: -19%;*/
+    /*}*/
+    /*#logo {*/
+        /*width: 3rem;*/
+        /*height: 3rem;*/
+    /*}*/
+    /*.go {*/
+        /*margin-left: 47%;*/
+        /*position: absolute;*/
+        /*margin-top: -8%;*/
+    /*}*/
+    /*#city-input {*/
+        /*width: 90%;*/
+    /*}*/
+/*}*/
+
+
+
 /* End of NavBar */
 
 .bar {
@@ -102,8 +108,6 @@ body {
 }
 
 #city-input {
-    width: 100%;
-    height: 50px;
     border-radius: 8px;
     text-align: center;
     font-size: 2rem;
@@ -112,13 +116,11 @@ body {
 
 .go {
     color: #FFFFFF;
-    height: 50px;
     border-radius: 8px;
-    font-size: x-large;
+    font-size: 1.5rem;
     background: none;
     border: 1px solid #FFFFFF;
     opacity: 0.8;
-    margin-left: 10px;
 }
 
 .expand-btn {
@@ -287,7 +289,7 @@ a:visited {
 
 footer{
     /*display: flex;*/
-    /*align-items: center;*/
+    align-items: center;
     width: 100%;
 }
 
