--- a/src/main/resources/templates/nav/jobs.html
+++ b/src/main/resources/templates/nav/jobs.html
@@ -14,25 +14,33 @@
     </script>
 </head>
 <body>
-<!--Custom navbar for main page-->
 <nav class="navbar navbar-fixed-top navbar-inverse">
     <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <a href="/jobs">
-                <img src="/img/placeholder-3.svg" id="logo" />
-            </a>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">LifeMap</a>
         </div>
-        <ul class="nav navbar-nav">
-            <li><a href="/register">Register</a></li>
-            <li><a href="/login">Login</a></li>
-        </ul>
-            <div class="navbar-left navbar-form">
-                <input type="text" class="form-control navbar-item" id="city-input" placeholder="Company Address"/>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li><a href="/register">Register <span class="sr-only">(current)</span></a></li>
+                <li><a href="/login">Login</a></li>
+            </ul>
+            <div class="navbar-form navbar-left">
+                <div class="form-group">
+                    <input type="text" id="city-input" class="form-control" placeholder="Search" />
+                </div>
+                <button type="submit" class="btn btn-default go">Submit</button>
             </div>
-            <button class="go navbar-item" id="get-info">Search</button>
-    </div>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
 </nav>
-
 <div id="content-wrap">
     <!--Temp location for Search Info-->
     <div class="city-info-wrap">
