--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -19,6 +19,36 @@
 
 <body>
 
+<!--NAV HOME / JOBS FRAGMENT-->
+<nav th:fragment="navbarSearch" class="navbar navbar-fixed-top navbar-inverse">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">LifeMap</a>
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li><a href="/register">Register <span class="sr-only">(current)</span></a></li>
+                <li><a href="/login">Login</a></li>
+            </ul>
+            <div class="navbar-form navbar-left">
+                <div class="form-group">
+                    <input type="text" id="city-input" class="form-control" placeholder="Enter Address" />
+                </div>
+                <button type="submit" class="btn btn-default go">Search</button>
+            </div>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+</nav>
+<!--END OF FRAGMENT-->
+
 <!--NAV BAR FRAGMENT-->
 <nav th:fragment="navbar" class="navbar navbar-default" id="nav-bar">
   <img src="/img/push-pin-on-map.svg" alt="logo" id="logo" />
