updated fragments and redid navbar fragment

--- a/src/main/resources/static/JS/login.css
+++ b/src/main/resources/static/JS/login.css
@@ -88,5 +88,14 @@ body, html{
 }
 
 .btn {
-    margin-top: 8px;
+    margin-top: 10px;
+}
+
+#moveFldsDiv{
+    margin-top: 85px;
+}
+
+/*not working */
+#logBtn{
+    margin-top: 15px;
 }
