--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -16,6 +16,22 @@
           crossorigin="anonymous">
   </script>
 </head>
+<!--END OF FRAGMENT-->
+<!--HEAD FRAGMENT-->
+<head th:fragment="headSearch(title)">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="initial-scale=1, width=device-width, maximum-scale=1" />
+    <title th:text="${title}"></title>
+    <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet" />
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
+    <link rel="stylesheet" href="/css/jobsPage.css" />
+    <!--<link rel="shortcut icon" href="./img/logoplaceholder.ico" type="image/ico"/>-->
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+            integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+            crossorigin="anonymous">
+    </script>
+</head>
+<!--END OF FRAGMENT-->
 
 <body>
 
@@ -35,8 +51,8 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="/register">Register <span class="sr-only">(current)</span></a></li>
-                <li><a href="/login">Login</a></li>
+                <li sec:authorize="!isAuthenticated()"><a href="/register">Register <span class="sr-only">(current)</span></a></li>
+                <li sec:authorize="!isAuthenticated()"><a href="/login">Login</a></li>
             </ul>
             <div class="navbar-form navbar-left">
                 <div class="form-group">
@@ -50,26 +66,28 @@
 <!--END OF FRAGMENT-->
 
 <!--NAV BAR FRAGMENT-->
-<nav th:fragment="navbar" class="navbar navbar-default" id="nav-bar">
-  <img src="/img/push-pin-on-map.svg" alt="logo" id="logo" />
-  <a href="/"><h2>LifeMap</h2></a>
-  <ul>
-    <div class="nav-links">
-      <li><a href="/">Home</a></li>
-      <li sec:authorize="isAuthenticated()">
-        <a href="/profile">Profile</a>
-      </li>
-      <li sec:authorize="isAuthenticated()">
-        <form th:action="@{'/logout'}" th:method="post">
-          <button>Log Out</button>
-        </form>
-      </li>
-      <li sec:authorize="!isAuthenticated()"><a href="/login">Log In</a></li>
-      <li sec:authorize="!isAuthenticated()"><a href="/register">Join Us!</a></li>
-    </div>
-  </ul>
+<nav th:fragment="navbar" class="navbar navbar-fixed-top navbar-inverse">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">LifeMap</a>
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li sec:authorize="!isAuthenticated()"><a href="/register">Register <span class="sr-only">(current)</span></a></li>
+                <li sec:authorize="!isAuthenticated()"><a href="/login">Login</a></li>
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
 </nav>
-
+<!--END OF FRAGMENT-->
 <footer th:fragment="footer">
   <a class="cntr-text" href="/about">The SimpleSauce Team</a>
 </footer>
