--- a/src/main/resources/templates/nav/jobs.html
+++ b/src/main/resources/templates/nav/jobs.html
@@ -1,46 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="initial-scale=1, width=device-width, maximum-scale=1" />
-    <title>Jobs</title>
-    <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet" />
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/css/jobsPage.css" />
-    <!--<link rel="shortcut icon" href="./img/logoplaceholder.ico" type="image/ico"/>-->
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"
-            integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-            crossorigin="anonymous">
-    </script>
-</head>
+<head th:replace="fragments :: headSearch('Jobs')" />
 <body>
-<nav class="navbar navbar-fixed-top navbar-inverse">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">LifeMap</a>
-        </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li><a href="/register">Register <span class="sr-only">(current)</span></a></li>
-                <li><a href="/login">Login</a></li>
-            </ul>
-            <div class="navbar-form navbar-left">
-                <div class="form-group">
-                    <input type="text" id="city-input" class="form-control" placeholder="Search" />
-                </div>
-                <button type="submit" class="btn btn-default go">Submit</button>
-            </div>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-</nav>
+<nav th:replace="fragments :: navbarSearch"/>
 <div id="content-wrap">
     <!--Temp location for Search Info-->
     <div class="city-info-wrap">
