--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,5 +1,4 @@
 body, html{
-    background-image: url("/img/road-map-login.jpg");
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -91,7 +90,7 @@ body, html{
     margin-top: 10px;
 }
 
-#moveFldsDiv{
+.moveFldsDiv{
     margin-top: 85px;
 }
 
