--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-<head th:replace="fragments :: head(title)"/>
+<head th:replace="fragments :: head(Login)"/>
 <body>
-
-<link rel="stylesheet" href="JS/login.css"/>
 <nav th:replace="fragments :: navbar" />
 
-<div id="moveFldsDiv" class="col-sm-6 col-sm-offset-3 text-center content-wrap">
+<div class="col-sm-6 col-sm-offset-3 text-center moveFldsDiv">
     <h1 id="loginHeader">LifeMap</h1>
 
     <br/>
