--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -2,22 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:replace="fragments :: head(title)" />
 <body>
-
-<link rel="stylesheet" href="JS/profile.css"/>
 <nav th:replace="fragments :: navbar" />
-
-
-
-<!--<form id="test1" th:action="@{/user/profile}" th:method="POST" th:object="${user}">-->
-<div class="container">
-
-
+<div class="container" id="content-wrap">
     <div id="moveAllFlds">
-
         <div>
             <h4>Update Your Profile</h4>
         </div>
-
         <div>
             <label for="username">Username:  </label>
         <!--<h1 th:text="${user.username}"></h1>-->
@@ -40,16 +30,9 @@
             </a>
             </div>
         </div>
-
     <footer th:replace="fragments :: footer" />
-
 </div>
-<!--</form>-->
-<script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-
+<script th:replace="fragments :: scripts" />
 <script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
-<script src="/JS/forms.js"></script>
-
 </body>
 </html>
