Updated ajax.js -Extra happiness details will be displayed -Only logged-in users will be able to see extra information.

--- a/src/main/resources/static/css/globalGym.css
+++ b/src/main/resources/static/css/globalGym.css
@@ -173,6 +173,10 @@ a:visited {
   position: relative;
 }
 
+.hidden {
+  display: none;
+}
+
 .extra-info {
   display: none;
   position: relative;
