--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 
 <!--HEAD FRAGMENT-->
 <head th:fragment="head(title)">
@@ -96,6 +97,7 @@
 <!--SCRIPTS FRAGMENT-->
 <scripts th:fragment="scripts">
   <input id="openWeatherMapKey" type="hidden" th:value="${@environment.getProperty('openweathermaps.key')}"/>
+  <span class="hidden" id="username" sec:authorize="isAuthenticated()" sec:authentication="name" />
   <input id="indeedKey" type="hidden" th:value="${@environment.getProperty('indeed.key')}"/>
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"
           integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
@@ -107,6 +109,12 @@
       /*<![CDATA[*/
       const MAPS_KEY = "@environment.getProperty('google.maps.key')";
       /*]]>*/
+  </script>
+  <script th:inline="javascript">
+    /*<![CDATA[*/
+    const user = $('#username').text();
+    console.log(user);
+    /*]]>*/
   </script>
   <script src="/JS/ajax.js"></script>
   <script src="/JS/forms.js"></script>
