--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -55,7 +55,7 @@
                 <li sec:authorize="!isAuthenticated()"><a href="/register">Register <span class="sr-only">(current)</span></a></li>
                 <li sec:authorize="!isAuthenticated()"><a href="/login">Login</a></li>
                 <li sec:authorize="isAuthenticated()"><a href="/profile">Profile <span class="sr-only">(current)</span></a></li>
-                <li sec:authorize="isAuthenticated()"><a href="/">Logout</a></li>
+                <li sec:authorize="isAuthenticated()"><a href="/login">Logout</a></li>
             </ul>
             <div class="navbar-form navbar-left">
                 <div class="form-group">
@@ -87,7 +87,7 @@
                 <li sec:authorize="!isAuthenticated()"><a href="/register">Register <span class="sr-only">(current)</span></a></li>
                 <li sec:authorize="!isAuthenticated()"><a href="/login">Login</a></li>
                 <li sec:authorize="isAuthenticated()"><a href="/profile">Profile <span class="sr-only">(current)</span></a></li>
-                <li sec:authorize="isAuthenticated()"><a href="/">Logout</a></li>
+                <li sec:authorize="isAuthenticated()"><a href="/login">Logout</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
