--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -87,7 +87,13 @@
                 <li sec:authorize="!isAuthenticated()"><a href="/register">Register <span class="sr-only">(current)</span></a></li>
                 <li sec:authorize="!isAuthenticated()"><a href="/login">Login</a></li>
                 <li sec:authorize="isAuthenticated()"><a href="/profile">Profile <span class="sr-only">(current)</span></a></li>
-                <li sec:authorize="isAuthenticated()"><a href="/login">Logout</a></li>
+                <li sec:authorize="isAuthenticated()">
+
+                    <form th:action="@{/logout}" th:method="post">
+                        <button>Logout</button>
+                    </form>
+                </li>
+
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
