Minor changes to globalGym.css -working on styling for colored-tile class
-added bootstrap to logout button

--- a/src/main/resources/static/css/globalGym.css
+++ b/src/main/resources/static/css/globalGym.css
@@ -94,6 +94,8 @@ a:visited {
 
 /*TODO Change these to have box shading on top and bottom*/
 .colored-tile {
+  display: flex;
+  justify-content: center;
   align-content: center;
   color: #ffffff;
   text-align: center;
