--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -4,32 +4,36 @@
 <body>
 <nav th:replace="fragments :: navbar" />
 <div class="container" id="content-wrap">
-    <div id="moveAllFlds">
-        <div>
-            <h4>Update Your Profile</h4>
-        </div>
-        <div>
-            <label for="username">Username:  </label>
-        <!--<h1 th:text="${user.username}"></h1>-->
-        </div>
-            <div>
-                <a href="#" id="username" name="username" data-type="text"
-                   th:attr="data-token=${_csrf.token},data-param=${_csrf.parameterName},data-pk=${user.id}"
-                   data-title="Username:  " th:text="${user.username}">
+  <div id="moveAllFlds">
+    <div>
+        <h4>Update Your Profile</h4>
+    </div>
+    <div>
+      <label for="username">Username</label>
+    <!--<h1 th:text="${user.username}"></h1>-->
+    </div>
+      <div>
+        <a href="#" id="username" name="username" data-type="text"
+           th:attr="data-token=${_csrf.token},data-param=${_csrf.parameterName},data-pk=${user.id}"
+           data-title="Username: " th:text="${user.username}">
+        </a>
+      </div>
+      <div>
+          <label for="email">Email</label>
+      </div>
+      <!--<p th:text="${user.email}"></p>-->
+      <div>
+        <a href="#" id="email" name="email" data-type="text"
+         th:attr="data-token=${_csrf.token},data-param=${_csrf.parameterName},data-pk=${user.id}"
+         data-title="Email: " th:text="${user.email}">
+        </a>
+      </div>
+    </div>
+    <div id="user-options">
+      <form action="/results"> <!-- TODO This may be pointing to the wrong path-->
 
-                </a>
-            </div>
-        <div>
-            <label for="email">Email:  </label>
-        </div>
-        <!--<p th:text="${user.email}"></p>-->
-            <div>
-                <a href="#" id="email" name="email" data-type="text"
-               th:attr="data-token=${_csrf.token},data-param=${_csrf.parameterName},data-pk=${user.id}"
-               data-title="Email:  " th:text="${user.email}">
-            </a>
-            </div>
-        </div>
+      </form>
+    </div>
     <footer th:replace="fragments :: footer" />
 </div>
 <script th:replace="fragments :: scripts" />
