--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,4 +1,5 @@
 body, html{
+    background-image: url('../img/lifemapSplash.png');
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
