--- a/src/main/resources/static/css/globalGym.css
+++ b/src/main/resources/static/css/globalGym.css
@@ -106,12 +106,19 @@ a:visited {
 
 /*TODO This will be changed to #content-wrap:nth-child(even)*/
 .colored-tile:nth-of-type(even) {
-  background-color: #73cec7;
+  background-color: #69D2E7;
 }
 
 /*TODO This will be changed to #content-wrap:nth-child(odd)*/
 .colored-tile:nth-of-type(odd) {
-  background-color: #5fb0a9;
+  background-color: #69D2E7;
+}
+
+.intro-title {
+  text-align: center;
+  display: flex;
+  align-content: center;
+  justify-content: center;
 }
 
 .section {
@@ -152,6 +159,7 @@ a:visited {
 }
 
 .info-card {
+  color: #594F4F;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -164,7 +172,7 @@ a:visited {
   width: 80vw;
   font-size: 25px;
   text-align: center;
-  background-color: rgba(235, 235, 188, 0.67);
+  background-color: #E5FCC2;
 }
 
 /*TODO Change the position of this element to be always in the top left of .info-card*/
@@ -183,6 +191,7 @@ a:visited {
 }
 
 .extra-info {
+  color: azure;
   display: none;
   position: relative;
   box-shadow: 0 4px 8px 0 #201419;
@@ -192,7 +201,7 @@ a:visited {
   width: 80vw;
   font-size: 1.3em;
   text-align: center;
-  background-color: rgba(180, 177, 180, 0.67);
+  background-color: #594F4F;
 }
 
 #averages-title {
@@ -205,7 +214,7 @@ a:visited {
 }
 
 #salary-img {
-  background-image: url('../img/');
+  background-image: url('../img/workharder.png');
 }
 
 #apartment-img {
