--- a/src/main/resources/static/css/globalGym.css
+++ b/src/main/resources/static/css/globalGym.css
@@ -3,8 +3,8 @@ html {
 }
 
 html, body {
-  height: 100%;
-  box-sizing: border-box;
+    height: 100%;
+    box-sizing: border-box;
 }
 
 body input:focus {
@@ -12,64 +12,88 @@ body input:focus {
 }
 
 body {
-  margin: 0;
-  font-family: Edelsans, Avenir, sans-serif;
-  background-color: #2c2c2c;
-  color: #FFFFFF;
+    outline: none;
+    margin: 0;
+    font-family: Edelsans, Avenir, sans-serif;
+    color: #FFFFFF;
+    background-color: #2c2c2c;
+
 }
+
+.cntr-text {
+    text-align: center;
+}
+
 /*===================NAV BAR===================*/
 .bar {
-  z-index: 1;
-  position: fixed;
-  display: flex;
-  align-content: center;
-  justify-content: center;
-  width: 100vw;
-  background: url('../img/compassandmap.png');
-  background-position: center;
-  background-size: cover;
-  top: 0;
-  padding: 5px;
+    color: black;
+    z-index: 1;
+    position: fixed;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    width: 100vw;
+    background-color: rgba(46, 46, 46, 0.6);
+    background-position: center;
+    background-size: cover;
+    top: 0;
+    padding: 5px;
 }
 
 .navbar-item {
-  margin: 4px;
+    margin: 4px;
+}
+
+.navbar-inverse {
+    background-color: rgba(42, 42, 42, 0.6);
 }
 
 .search {
-  flex: 1;
+    flex: 1;
 }
 
 #logo {
-
+    width: 5rem;
+    height: 5rem;
 }
 
 #city-input {
-  color: #515151;
-  border-radius: 8px;
+    color: #515151;
+    border-radius: 8px;
+    text-align: center;
+    font-size: 2rem;
+}
+
+.go {
+    color: #FFFFFF;
+    border-radius: 8px;
+    font-size: 1.5rem;
+    background: none;
+    border: 1px solid #FFFFFF;
+    opacity: 0.8;
 }
 
 a:visited {
-  color: #00B4FF;
+    color: #00B4FF;
 }
 
 /*===================CONTENT BELOW NAVBAR===================*/
 
 /*Wraps everything below navbar*/
 #content-wrap {
-  margin-top: 75px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+    margin-top: 75px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 /*Wraps location-image, location-name and location-info*/
 #city-info-wrap {
-  background-color: #abdde9;
+    background-color: #abdde9;
 }
 
 #location-image {
-  width: 100%;
+    width: 100%;
 }
 
 #location-name {
@@ -77,126 +101,132 @@ a:visited {
 }
 
 #location-info {
-  background-color: #1BB0CE;
-  width: 100%;
-  box-shadow: 0 4px 8px 0 #563444;
-  text-align: center;
+    background-color: #1BB0CE;
+    width: 100%;
+    box-shadow: 0 4px 8px 0 #563444;
+    text-align: center;
 }
 
 /*Self-explanatory, sits in its own section*/
 #map {
-  margin: 5px auto;
-  z-index: 0;
-  background-color: azure;
-  height: 300px;
-  width: 90%;
+    margin: 5px auto;
+    z-index: 0;
+    background-color: azure;
+    height: 300px;
+    width: 90%;
+    border-radius: 8px;
 }
 
 /*TODO Change these to have box shading on top and bottom*/
 .colored-tile {
-  align-content: center;
-  color: #ffffff;
-  text-align: center;
-  font-size: 4vw;
-  height: 50vh;
-  width: 100vw;
+    align-content: center;
+    color: #ffffff;
+    text-align: center;
+    font-size: 4vw;
+    height: 25vh;
+    width: 100vw;
 }
 
 /*TODO This will be changed to #content-wrap:nth-child(even)*/
 .colored-tile:nth-of-type(even) {
-  background-color: #73cec7;
+    background-color: #1BB0CE;
 }
 
 /*TODO This will be changed to #content-wrap:nth-child(odd)*/
 .colored-tile:nth-of-type(odd) {
-  background-color: #5fb0a9;
+    background-color: #00B4FF;
 }
 
 .section {
-  height: 100vh;
-  box-sizing: border-box;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  flex-direction: column;
-  padding: 2vw;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  font-size: 4vw;
+    height: 100vh;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    padding: 2vw;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    font-size: 4vw;
 }
 
 /*==================INFO CARDS CSS==================*/
 #info-card-container {
-  justify-content: center;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .expand-btn {
-  position: absolute;
-  top: 130px;
-  right: 5px;
-  height: 32px;
-  width: 32px;
+    position: absolute;
+    top: 130px;
+    right: 5px;
+    width: 10vw;
+    height: 10vh;
+    margin-left: 20vw;
+    margin-top: -16vh;
 }
 
 /*TODO Make this change size dynamically with vh and vw*/
 .expand-img {
-  height: 32px;
-  width: 32px;
+    height: 32px;
+    width: 32px;
 }
 
 .info-card {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-content: center;
-  box-shadow: 0 4px 8px 0 #201419;
-  margin: 5px auto;
-  margin-bottom: 0;
-  height: 50vh;
-  width: 80vw;
-  font-size: 4vw;
-  text-align: center;
-  background-color: rgba(235, 235, 188, 0.67);
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    box-shadow: 0 4px 8px 0 #563444;
+    margin: 5px auto;
+    margin-bottom: 0;
+    height: 300px;
+    width: 360px;
+    font-size: 2vw;
+    text-align: center;
+    background-color: rgba(235, 235, 188, 0.67);
 }
 
 /*TODO Change the position of this element to be always in the top left of .info-card*/
 .info-card-img {
-  width: 10vw;
-  height: 10vh;
-  position: relative;
+    width: 10vw;
+    height: 10vh;
+    position: relative;
+    margin-left: -1.2vw;
+    margin-top: -10vh;
+    margin-bottom: 16vh;
 }
 
 .hidden {
-  display: none;
+    display: none;
 }
 
 .extra-info {
-  display: none;
-  position: relative;
-  box-shadow: 0 4px 8px 0 #201419;
-  margin: 5px auto;
-  margin-top: 0;
-  height: 50vh;
-  width: 80vw;
-  font-size: 4vw;
-  text-align: center;
-  background-color: rgba(180, 177, 180, 0.67);
+    display: none;
+    position: relative;
+    box-shadow: 0 4px 8px 0 #201419;
+    margin: 5px auto;
+    margin-top: 0;
+    height: 50vh;
+    width: 80vw;
+    font-size: 4vw;
+    text-align: center;
+    background-color: rgba(180, 177, 180, 0.67);
 
 }
 
 #averages-title {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 /*==================INDIVIDUAL INFO BACKGROUNDS==================*/
 #happiness-img {
-  background-image: url('../img/cloudwalking.png');
+    background-image: url('../img/cloudwalking.png');
 }
 
 #coffee-img {
@@ -219,10 +249,9 @@ a:visited {
 
 }
 
-footer{
-  display: flex;
-  align-items: center;
-  width: 100%;
+footer {
+    width: 100%;
+    margin-left: 45%;
 }
 
 /*==================MEDIUM AND LARGE SIZE CHANGES==================*/
