--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -26,7 +26,6 @@
     <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet" />
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
     <link rel="stylesheet" href="/css/globalGym.css" />
-    <link rel="stylesheet" href="/css/jobsPage.css" />
     <!--<link rel="shortcut icon" href="./img/logoplaceholder.ico" type="image/ico"/>-->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"
             integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
@@ -58,7 +57,7 @@
                 <li sec:authorize="isAuthenticated()"><a href="/profile">Profile <span class="sr-only">(current)</span></a></li>
                 <li sec:authorize="isAuthenticated()">
                     <form th:action="@{/logout}" th:method="post">
-                        <button>Logout</button>
+                        <button class="btn btn-link" >Logout</button>
                     </form>
                 </li>
             </ul>
@@ -94,7 +93,7 @@
                 <li sec:authorize="isAuthenticated()"><a href="/profile">Profile <span class="sr-only">(current)</span></a></li>
                 <li sec:authorize="isAuthenticated()">
                     <form th:action="@{/logout}" th:method="post">
-                        <button>Logout</button>
+                        <button class="btn btn-link">Logout</button>
                     </form>
                 </li>
 
