Finally merged the css files and removed 1 fragment.

--- a/src/main/resources/templates/nav/index.html
+++ b/src/main/resources/templates/nav/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-<head th:replace="fragments :: headSearch('LifeMap')"/>
+<head th:replace="fragments :: head('LifeMap')"/>
 <body>
 <nav th:replace="fragments :: navbarSearch"/>
 <div id="content-wrap">
