--- a/src/main/resources/static/css/globalGym.css
+++ b/src/main/resources/static/css/globalGym.css
@@ -5,6 +5,9 @@ html {
 html, body {
     height: 100%;
     box-sizing: border-box;
+    background-size: cover;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
 }
 
 body input:focus {
@@ -254,4 +257,98 @@ footer {
     margin-left: 45%;
 }
 
-/*==================MEDIUM AND LARGE SIZE CHANGES==================*/
+#moveAllFlds{
+    margin-top: 100px;
+}
+
+#logBtn{
+    margin-top: 15px;
+}
+
+#updateProfile{
+    font-size: 25px;
+    color: white;
+}
+
+#loginHeader{
+    font-family: 'Monoton', cursive;
+    font-size: 3em;
+}
+
+#username{
+    border-radius: 2px;
+    background-color: #515151;
+    color: white;
+}
+
+#password{
+    border-radius: 2px;
+    background-color: #515151;
+    color: white;
+}
+
+#usernameLbl{
+    font-size: 15px;
+}
+
+#passwordLbl{
+    font-size: 15px;
+}
+
+.semi-transparent-button {
+    display: block;
+    box-sizing: border-box;
+    margin: 0 auto;
+    padding: 8px;
+    width: 80%;
+    max-width: 200px;
+    background: #fff; /* fallback color for old browsers */background: rgba(255, 255, 255, 0.1);
+    border-radius: 5px;
+    color: #515151;
+    text-align: center;
+    text-decoration: none;
+    letter-spacing: 1px;
+    transition: all 0.3s ease-out;
+    position: relative;
+    top: 145px;
+    border: dimgray;
+    border-style: solid;
+    border-width: 1px;
+}
+
+#titleLbl{
+    margin-left: 450px;
+    margin-top: 50px;
+}
+
+.error{
+    color: red;
+    font-size: large;
+}
+
+#errorDiv{
+    margin-top: 160px;
+    margin-left: -90px;
+}
+
+.navbar-brand{
+    padding: 0 15px;
+}
+
+.site-name{
+    color: white;
+    font-size: 1.5em;
+    margin-top: 10px;
+}
+
+.btn {
+    margin-top: 10px;
+}
+
+.moveFldsDiv{
+    margin-top: 85px;
+}
+
+#logBtn{
+    margin-top: 15px;
+}
