Added links and pics for the about page with our names.

--- a/src/main/resources/templates/nav/about.html
+++ b/src/main/resources/templates/nav/about.html
@@ -3,9 +3,38 @@
 <head th:replace="fragments :: head(About)" />
 <body>
 <nav th:replace="fragments :: navbar" />
-
+<div class="container-fluid" id="content-wrap">
+    <div class="">
+        <div class="pic-self col-4 col-sm-4 col-md-4 col-lg-4">
+            <P class="pic-name">Everardo Sifuentes</P>
+            <img id="test-rotate" src="/img/EverardoSifuentes.jpeg" />
+            <div class="links-row">
+                <a href="https://github.com/syee4sev"  target="_blank"><img src="/img/GitHub_Logo_White.png" /></a>
+                <a href="https://www.linkedin.com/in/everardosifuentes/" target="_blank"><img src="/img/Link.png" /></a>
+                <a href="" target="_blank"><img src="/img/codeup-mark-horizontal.png" /></a>
+            </div>
+        </div>
+        <div class="pic-self col-4 col-sm-4 col-md-4 col-lg-4">
+            <P class="pic-name">James Carrico</P>
+            <img src="/img/JamesCarrico.jpg" />
+            <div class="links-row">
+                <a href="https://github.com/Jerik0" target="_blank"><img src="/img/GitHub_Logo_White.png" /></a>
+                <a href="https://www.linkedin.com/in/jamescarrico/" target="_blank"><img src="/img/Link.png" /></a>
+                <a href="" target="_blank"><img src="/img/codeup-mark-horizontal.png" /></a>
+            </div>
+        </div>
+        <div class="pic-self col-4 col-sm-4 col-md-4 col-lg-4">
+            <P class="pic-name">Jaime Moncada</P>
+            <img src="/img/JaimeMoncada.jpg" />
+            <div class="links-row">
+                <a href="https://github.com/jmoncad2" target="_blank"><img src="/img/GitHub_Logo_White.png" /></a>
+                <a href="https://www.linkedin.com/in/jaime-moncada/" target="_blank"><img src="/img/Link.png" /></a>
+                <a href="" target="_blank"><img src="/img/codeup-mark-horizontal.png" /></a>
+            </div>
+        </div>
+    </div>
 <footer th:replace="fragments :: footer" />
-
+</div>
 <script th:replace="fragments :: scripts" />
 </body>
 </html>
