--- a/src/main/resources/static/css/globalGym.css
+++ b/src/main/resources/static/css/globalGym.css
@@ -229,32 +229,39 @@ a:visited {
 
 /*==================INDIVIDUAL INFO BACKGROUNDS==================*/
 #happiness-img {
-    background-image: url('../img/cloudwalking.png');
+    background-image: url('../img/happiness.png');
 }
 
-#coffee-img {
-
-}
-
-#fitness-img {
-
-}
-
-#meal-img {
-
+#salary-img {
+    background-image: url('../img/workharder.png');
 }
 
 #apartment-img {
+    background-image: url('../img/apartments.png');
+}
 
+#living-cost-img {
+    background-image: url('../img/');
+}
+
+#startup-img {
+    background-image: url('../img/startups.png');
+}
+
+#culture-img {
+    background-image: url('../img/culture.png');
 }
 
 #weather-img {
+    background-image: url('../img/cloudwalking.png');
+}
 
+#clean-img {
+    background-image: url('../img/windmills.png');
 }
 
 footer {
-    width: 100%;
-    margin-left: 45%;
+    margin: auto;
 }
 
 #moveAllFlds{
@@ -331,17 +338,9 @@ footer {
     margin-left: -90px;
 }
 
-.navbar-brand{
-    padding: 0 15px;
-}
-
 .site-name{
     color: white;
     font-size: 1.5em;
-    margin-top: 10px;
-}
-
-.btn {
     margin-top: 10px;
 }
 
@@ -352,3 +351,34 @@ footer {
 #logBtn{
     margin-top: 15px;
 }
+
+.links-row a img{
+    width: 18%;
+    height: 18%;
+}
+
+.pic-self img{
+    width: 60%;
+    height: 50%;
+}
+
+.pic-name {
+    text-align: start;
+    font-size: 2em;
+}
+
+#test-rotate {
+    transform: rotate(180deg);
+}
+
+/*@media screen and (max-width: 780px) {*/
+
+/*form#city-input {*/
+    /*color: #515151;*/
+    /*border-radius: 8px;*/
+    /*text-align: center;*/
+    /*font-size: .5rem;*/
+    /*width: 3em;*/
+/*}*/
+
+/*}*/
