--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -21,19 +21,19 @@
 
 <!--NAV HOME / JOBS FRAGMENT-->
 <nav th:fragment="navbarSearch" class="navbar navbar-fixed-top navbar-inverse">
-    <div class="container-fluid">
+    <div class="container-fluid row">
         <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
+        <div class="navbar-header col-1 col-sm-2 col-md-2 col-lg-2">
             <a class="navbar-brand" href="/">LifeMap</a>
         </div>
+        <div class="navbar-form col-2 col-sm-4 col-md-7 col-lg-7">
+            <div class="form-group">
+                <input type="text" id="city-input" class="form-control" placeholder="Enter Address" />
+                <button type="submit" class="btn btn-default go">Search</button>
+            </div>
+        </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div class="collapse navbar-collapse col-1 col-sm-2 col-md-2 col-lg-2" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li sec:authorize="!isAuthenticated()"><a href="/register">Register <span class="sr-only">(current)</span></a></li>
                 <li sec:authorize="!isAuthenticated()"><a href="/login">Login</a></li>
@@ -44,13 +44,15 @@
                     </form>
                 </li>
             </ul>
-            <div class="navbar-form navbar-left">
-                <div class="form-group">
-                    <input type="text" id="city-input" class="form-control" placeholder="Enter Address" />
-                </div>
-                <button type="submit" class="btn btn-default go">Search</button>
-            </div>
         </div><!-- /.navbar-collapse -->
+        <div class="col-2 col-sm-1 col-md-1 col-lg-1">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
     </div><!-- /.container-fluid -->
 </nav>
 <!--END OF FRAGMENT-->
