--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -14,7 +14,7 @@
         <div class="form-group">
             <label id="usernameLbl" for="username" class="col-sm-2 control-label">Username</label>
             <div class="col-sm-10">
-                <input id="username" class="col-sm-10" name="username" type="text"/>
+                <input id="username" class="col-sm-10" name="username" autofocus="true" type="text"/>
             </div>
         </div>
 
@@ -27,7 +27,7 @@
 
         <br/>
 
-        <input class="align-center semi-transparent-button btn" type="submit" value="Log In"/>
+        <input class="align-center btn" type="submit" value="Log In"/>
         <div id="LoginErrorDiv">
             <div class="error" th:if="${param.error}">
                 Invalid Username and Password.
@@ -35,6 +35,7 @@
         </div>
 
     </form>
+    <footer th:replace="fragments :: footer"/>
 </div>
 <!--<footer th:replace="fragments :: footer"/>-->
 <script th:replace="fragments :: scripts"/>
