--- a/src/main/resources/static/css/globalGym.css
+++ b/src/main/resources/static/css/globalGym.css
@@ -1,5 +1,6 @@
 html {
     font-size: 14px;
+    max-width: 100vw;
 }
 
 html, body {
@@ -10,7 +11,7 @@ html, body {
     background-repeat: no-repeat;
 }
 
-body input:focus {
+*:focus {
     outline: none;
 }
 
@@ -18,9 +19,8 @@ body {
     outline: none;
     margin: 0;
     font-family: Edelsans, Avenir, sans-serif;
-    color: #FFFFFF;
-    background-color: #2c2c2c;
-
+    color: #201419;
+    background-color: #99bab8;
 }
 
 .cntr-text {
@@ -60,17 +60,35 @@ body {
     height: 5rem;
 }
 
+#search-wrapper {
+    color: #e9d8a8;
+}
+
 #city-input {
-    color: #515151;
+    margin: 0 auto;
+    width: 50%;
+    background-color: #cefffc;
+    border-style: inset;
     border-radius: 8px;
     text-align: center;
     font-size: 2rem;
 }
 
-.go {
+/*.go {*/
+    /*margin: 0 auto;*/
+    /*color: #FFFFFF;*/
+    /*border-radius: 8px;*/
+    /*font-size: 1.5rem;*/
+    /*background: none;*/
+    /*border: 1px solid #FFFFFF;*/
+    /*opacity: 0.8;*/
+/*}*/
+
+#get-info {
+    margin: 0 auto;
     color: #FFFFFF;
     border-radius: 8px;
-    font-size: 1.5rem;
+    font-size: 1.3em;
     background: none;
     border: 1px solid #FFFFFF;
     opacity: 0.8;
@@ -110,22 +128,35 @@ a:visited {
     text-align: center;
 }
 
+#map-backdrop {
+    height: 345px;
+}
+
+#map-backdrop-img {
+    display: block;
+    height: 100%;
+    margin: auto;
+}
+
 /*Self-explanatory, sits in its own section*/
 #map {
+    position: relative;
+    top: -270px;
+    /*right: 25%;*/
     margin: 5px auto;
     z-index: 0;
-    background-color: azure;
-    height: 300px;
-    width: 90%;
-    border-radius: 8px;
+    background-color: rgba(240, 255, 255, 0.65);
+    height: 200px;
+    width: 300px;
+    border-radius: 3%;
 }
 
 /*TODO Change these to have box shading on top and bottom*/
 .colored-tile {
-    align-content: center;
+    box-shadow: 0 4px 8px 0 #563444;
     color: #ffffff;
     text-align: center;
-    font-size: 4vw;
+    font-size: 3em;
     height: 25vh;
     width: 100vw;
 }
@@ -138,6 +169,12 @@ a:visited {
 /*TODO This will be changed to #content-wrap:nth-child(odd)*/
 .colored-tile:nth-of-type(odd) {
     background-color: #00B4FF;
+}
+
+.intro-title {
+    position: relative;
+    top: 30%;
+    transform: translateY(-50%);
 }
 
 .section {
@@ -180,19 +217,16 @@ a:visited {
 }
 
 .info-card {
+    color: #201419;
     position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
     box-shadow: 0 4px 8px 0 #563444;
     margin: 5px auto;
     margin-bottom: 0;
     height: 300px;
     width: 360px;
-    font-size: 2vw;
+    font-size: 1em;
     text-align: center;
-    background-color: rgba(235, 235, 188, 0.67);
+    background-color: #dde4d3;
 }
 
 /*TODO Change the position of this element to be always in the top left of .info-card*/
@@ -217,14 +251,17 @@ a:visited {
 .extra-info {
     display: none;
     position: relative;
-    box-shadow: 0 4px 8px 0 #201419;
+    color: #201419;
+    justify-content: center;
+    align-content: center;
+    box-shadow: 0 4px 8px 0 #563444;
     margin: 5px auto;
-    margin-top: 0;
-    height: 50vh;
-    width: 80vw;
-    font-size: 4vw;
+    margin-bottom: 0;
+    height: 300px;
+    width: 360px;
+    font-size: 2vw;
     text-align: center;
-    background-color: rgba(180, 177, 180, 0.67);
+    background-color: #dde4d3;
 
 }
 
@@ -375,6 +412,59 @@ footer {
 #test-rotate {
     transform: rotate(180deg);
 }
+
+/*SIDE NAVIGATION*/
+.to-top-btn {
+    position: fixed;
+    bottom: 50px;
+    right: -100px;
+    z-index: 999999;
+    background: gray;
+    color: white;
+    margin: 0;
+    padding: 0;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    overflow: hidden;
+    opacity: 0.8;
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+}
+.to-top-btn:hover {
+     color: white;
+     background: black;
+     cursor: pointer;
+ }
+
+.showme {
+    position: fixed;
+    bottom: 50px;
+    z-index: 999999;
+    background: gray;
+    color: white;
+    margin: 0;
+    padding: 0;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    overflow: hidden;
+    opacity: 0.8;
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+    right: 30px;
+ }
+
+i {
+    font-size: 30px;
+    margin-top: 7px;
+    margin-left: -2px;
+}
+
 
 @media screen and (min-width: 768px) {
 
