--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -29,12 +29,7 @@
         <div class="navbar-header col-1 col-sm-2 col-md-2 col-lg-2">
             <a class="navbar-brand" href="/">LifeMap</a>
         </div>
-        <div id="test-search" class="navbar-form col-2 col-sm-4 col-md-7 col-lg-7">
-            <div class="form-group">
-                <input type="text" id="city-input" class="form-control" placeholder="Enter Address" />
-                <button type="submit" class="btn btn-default go">Search</button>
-            </div>
-        </div>
+
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse col-1 col-sm-2 col-md-2 col-lg-2" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
@@ -87,6 +82,13 @@
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
+</nav>
+
+<nav th:fragment="side-nav">
+    <div class="btn to-top-btn hidden-xs hidden-sm">
+        <i class="glyphicon glyphicon-arrow-up"></i>
+    </div>
+    <p>&nbsp;</p>
 </nav>
 
 <!--FOOTER FRAGMENT-->
