--- a/src/main/resources/templates/nav/index.html
+++ b/src/main/resources/templates/nav/index.html
@@ -5,15 +5,29 @@
 <nav th:replace="fragments :: navbarSearch"/>
 <div id="content-wrap">
     <!--Temp location for Search Info-->
+  <div id="map-backdrop">
+    <img id="map-backdrop-img" th:src="@{/img/006-map.svg}" alt=""/>
+    <div id="map"></div>
+  </div>
+
+  <div id="search-wrapper" class="form-group">
+    <input type="text" id="city-input" class="form-control" placeholder="Enter Address" />
+    <button id="get-info" type="submit" class="btn btn-default go">Search</button>
+  </div>
+
     <div class="city-info-wrap">
         <div id="image-container"></div>
-            <h1 class="cntr-text" id="location-name">Type An Address!</h1>
-        <div id="location-info"></div>
+            <h1 class="cntr-text" id="location-name"></h1>
+      <div id="test-search" class="navbar-form col-2 col-sm-4 col-md-7 col-lg-7">
+      </div>
+      <div id="location-info"></div>
     </div>
 
-    <div id="map"></div>
-
-    <div id="info-card-container"></div>
+    <div id="info-card-container">
+      <div class="btn to-top-btn hidden-xs hidden-sm">
+        <i class="glyphicon glyphicon-arrow-up"></i>
+      </div>
+    </div>
     <form th:object="${user.configuration}">
         <input type="hidden" th:field="*{business}"/>
         <input type="hidden" th:field="*{healthcare}"/>
@@ -21,6 +35,8 @@
         <input type="hidden" th:field="*{tolerance}"/>
         <input type="hidden" th:field="*{outdoors}"/>
     </form>
+
+    <nav th:replace="fragments :: side-nav"></nav>
 
     <footer th:replace="fragments :: footer"/>
 </div>
